@@ -28,6 +28,7 @@ Gem::Specification.new do |s|
   s.add_development_dependency('rcov', '>= 0.9.9')
   s.add_development_dependency('perftools.rb', '>= 0.5.4')
   s.add_development_dependency('yard', '>= 0.6.2')
+  s.add_development_dependency('awesome_print')
 
   s.files         = `git ls-files`.split("\n")
   s.test_files    = `git ls-files -- {test,spec,features}/*`.split("\n")
